--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -11,6 +11,10 @@
         <MudNavLink Href="/player-tools/my-profile">My Profile</MudNavLink>
         <MudNavLink Href="/player-tools/deck-suggestions">Deck Suggestions</MudNavLink>
     </MudNavGroup>
+    <MudNavGroup Title="Clan Management" Icon="@Icons.Filled.Groups" Expanded>
+        <MudNavLink Href="/clan-management/register">Register</MudNavLink>
+        <MudNavLink Href="/clan-management/my-clans">My Clans</MudNavLink>
+    </MudNavGroup>
     <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook">
         <MudNavLink Href="/wiki/units" Icon="@Icons.Filled.PersonPinCircle">Units</MudNavLink>
         <MudNavLink Href="/wiki/heroes" Icon="@Icons.Filled.EmojiPeople">Heroes</MudNavLink>
