--- a/src/RushRoyale.WebUI/Shared/MainLayout.razor
+++ b/src/RushRoyale.WebUI/Shared/MainLayout.razor
@@ -31,7 +31,7 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+        <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-4">
             <ErrorBoundary @ref="_errorBoundary">
                 <ChildContent>
                     @Body
