--- a/src/RushRoyale.WebUI/Pages/Developer/DataEditor.razor
+++ b/src/RushRoyale.WebUI/Pages/Developer/DataEditor.razor
@@ -13,10 +13,17 @@
 }
 else
 {
-    <MudButtonGroup Color="Color.Inherit" Variant="Variant.Outlined" Class="my-4" OverrideStyles="false">
-        <MudButton Color="Color.Warning" OnClick="async () => await OnParametersSetAsync()">Reset</MudButton>
-        <MudButton Color="Color.Secondary" OnClick="ExportDataAsync">Export</MudButton>
-    </MudButtonGroup>
+    <div class="d-flex align-center" style="height: fit-content">
+        <MudButtonGroup Color="Color.Inherit" Variant="Variant.Outlined" Class="my-4" OverrideStyles="false">
+            <MudButton Color="Color.Warning" OnClick="async () => await OnParametersSetAsync()">Reset</MudButton>
+            <MudButton Color="Color.Secondary" OnClick="ExportDataAsync">Export</MudButton>
+        </MudButtonGroup>
+        
+        <MudSpacer />
+        
+        <MudButton Color="Color.Primary" Variant="Variant.Filled" StartIcon="@Icons.Filled.Add"
+                   OnClick="HandleAddItem">New</MudButton>
+    </div>
  
     <GenericDataGrid Items="_data" />
 }
@@ -65,4 +72,11 @@ else
         var file = Encoding.UTF8.GetBytes(exportString);
         await JS.InvokeVoidAsync("BlazorDownloadFile", fileName, "application/json", file);
     }
+
+    private void HandleAddItem()
+    {
+        var newItem = Activator.CreateInstance(_data.First().GetType());
+        _data.Add(newItem);
+    }
+
 }
