--- a/src/RushRoyale.WebUI/Pages/PlayerTools/DeckSuggestions.razor
+++ b/src/RushRoyale.WebUI/Pages/PlayerTools/DeckSuggestions.razor
@@ -43,14 +43,6 @@ else
 
 @code {
 
-    private static readonly List<List<string>> _deckSuggestionsBeta = new()
-    {
-        new List<string>() { "pawn_crystalmancer", "pawn_poisonivy", "pawn_bombardier", "pawn_coldmage", "pawn_catapult"},
-        new List<string>() { "pawn_engineer", "pawn_thundercaller", "pawn_priestess", "pawn_pierrot", "pawn_bombardier"},
-        new List<string>() { "pawn_cultist", "pawn_portalkeeper", "pawn_dryad", "pawn_harlequin", "pawn_corrosionchemist"},
-
-    };
-    
     private bool _loading;
 
     private PlayerProfile _profile;
@@ -66,21 +58,10 @@ else
 
         ArgumentNullException.ThrowIfNull(units);
 
-        _suggestions = _deckSuggestionsBeta.Select(deckUnitStrings 
-            => deckUnitStrings.Select(x => units.First(u => u.Id == x)).ToList()).ToList();
-        /*var random = new Random();
-        _suggestions = new List<List<Unit>>();
-        for (int i = 0; i < 6; i++)
-        {
-            var newSuggestion = new List<Unit>();
+        var suggestions = await DataService.GetDeckSuggestionsAsync();
 
-            for (var y = 0; y < 5; y++)
-            {
-                newSuggestion.Add(units[random.Next(0, units.Count)]);
-            }
-            
-            _suggestions.Add(newSuggestion);
-        }*/
+        _suggestions = suggestions.Select(x 
+            => x.UnitIds.Select(x => units.First(u => u.Id == x)).ToList()).ToList();
 
         _loading = false;
     }
