🐛 Fix click on mobile

--- a/src/RushRoyale.WebUI/Shared/ClanUserTools.razor
+++ b/src/RushRoyale.WebUI/Shared/ClanUserTools.razor
@@ -3,7 +3,8 @@
 
 <MudMenu Icon="@Icons.Filled.MoreVert" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" Style="float: right">
     <MudMenuItem Icon="@Icons.Material.Filled.Warning"
-                 OnClick="WarnUserAsync">
+                 OnClick="WarnUserAsync"
+                 OnTouch="WarnUserAsync">
         Warn about Unused Sandals
     </MudMenuItem>
 </MudMenu>
