✨ Random Deck generator

--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -10,6 +10,7 @@
     <MudNavGroup Title="Player Tools" Icon="@Icons.Filled.Person" Expanded>
         <MudNavLink Href="/player-tools/my-profile">My Profile</MudNavLink>
         <MudNavLink Href="/player-tools/deck-suggestions">Deck Suggestions</MudNavLink>
+        <MudNavLink Href="/player-tools/random-deck-generator">Random Deck Generator</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Clan Management" Icon="@Icons.Filled.Groups" Expanded>
         <MudNavLink Href="/clan-management/register">Register</MudNavLink>
